Updated temp.html and city.html
Updated city.html and temp.html

--- a/app/templates/public/city.html
+++ b/app/templates/public/city.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>{% block page_title %}{% endblock %}</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>{% block page_title %} {{ city }} market research service{% endblock %}</title>
+  <meta content="" name="No. 1 Market and product research service provider in {{ city }}. Start a market research project with us for best results in {{ city}}">
+  <meta content="" name="market research in {{city}}">
 
   <!-- Favicons -->
   <link rel="icon" href="{{ url_for('static', filename='assets/img/favicon.png')}}">
@@ -485,28 +485,31 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-links">
             <h3>{{ config.APP_NAME }}</h3>
-            <p>
-              Coverage Areas: <br>
-			  North East<br>
-			  North Central<br>
-			  North West<br>
-              South West <br>
-              South East<br>
-			  South South 	<br>
-              <strong>Email:</strong> office@marketresearch.com.ng<br>
-            </p>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Calabar/">Calabar</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Uyo/">Uyo</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Port Harcourt/">Port Harcourt</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Awka/">Awka</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Aba/">Aba</a></li>
+            </ul>
           </div>
           <div class="col-lg-2 col-md-6 footer-links">
-            <!---<h4>Useful Links</h4>
-            <!---<ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>---->
+            <h4>Cities Nigeria</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Adamawa/">Adamawa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Bauchi/">Bauchi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Gombe/">Gombe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Jalingo/">Jalingo</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Lagos/">Lagos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Ibadan/">Ibadan</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Enugu/">Enugu</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Nsukka/">Nuskka</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Okigwe/">Okigwe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Orlu/">Orlu</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Abakaliki/">Abakaliki</a></li>
+            </ul>
           </div>
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
