--- a/app/templates/project/project_details.html
+++ b/app/templates/project/project_details.html
@@ -35,6 +35,7 @@
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
                 <a class="ui teal left floated button" href="{{ url_for('project.index') }}">Create New Project</a>
+				<a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=project.id, org_id=org.id) }}">Create Screener Question</a>
 				
 				{% if question.id | length > 10 %} <!----limit to only 10 questions per project --->
 				{% else %}
@@ -52,11 +53,7 @@
                         <th>Project Id</th>
                         <th>Question</th>
                         <th>Description</th>
-                        <th>Option 1</th>
-                        <th>Option 2</th>
-                        <th>Option 3</th>
-                        <th>Option 4</th>
-                        <th>Option 5</th>
+                        <th>Answer required</th>
                         <th>Edit</th>
                     </tr>
                     </thead>
@@ -66,13 +63,9 @@
                             <td>{{ u.project_id }}</td>
                             <td>{{ u.question }}</td>
 							<td>{{ u.description }}</td>
-							<td>{{ u.option_one }}</td>
-							<td>{{ u.option_two }}</td>
-							<td>{{ u.option_three }}</td>
-							<td>{{ u.option_four }}</td>
-							<td>{{ u.option_five }}</td>
+							<td>{{ u.required_answer }}</td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', project_id=u.id, name=u.question) }}">Edit</a>            
+                                <a class="ui blue left floated button" href="{{ url_for('question.edit_screener_question', question_id=u.id, question=u.question) }}">Edit</a>            
                             </td>
                         </tr>
                     {% endfor %}
