--- a/app/templates/project/project_details.html
+++ b/app/templates/project/project_details.html
@@ -35,9 +35,11 @@
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
                 <a class="ui teal left floated button" href="{{ url_for('project.index') }}">Create New Project</a>
-				<a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=project.id, org_id=org.id) }}">Create Screener Question</a>
+				<a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=project_id, org_id=org.id) }}">Create Screener Question</a>
+
+				<a class="ui teal right floated button" href="{{ url_for('question.new_scale_question', project_id=project_id, org_id=org.id) }}">Create Scale Question</a>
 				
-				{% if question.id | length > 10 %} <!----limit to only 10 questions per project --->
+				{% if screener_question.id | length > 10 %} <!----limit to only 10 questions per project --->
 				{% else %}
 				<td><a class="ui teal right floated button" href="{{ url_for('question.new_question', project_id=project_id) }}">Add Question</a></td>
                 {% endif %}
@@ -49,23 +51,57 @@
                 <table class="ui searchable sortable unstackable selectable celled table">
                     <thead>
                     <tr>
-
-                        <th>Project Id</th>
                         <th>Question</th>
                         <th>Description</th>
-                        <th>Answer required</th>
+                        <th>Answer Option</th>
+                        <th>Answer Option</th>
+                        <th>Answer Option</th>
+                        <th>Answer Option</th>
+                        <th>Answer Option</th>
                         <th>Edit</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for u in question %}
+                    {% for u in screener_question %}
                         <tr>
-                            <td>{{ u.project_id }}</td>
                             <td>{{ u.question }}</td>
 							<td>{{ u.description }}</td>
-							<td>{{ u.required_answer }}</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
                             <td>
                                 <a class="ui blue left floated button" href="{{ url_for('question.edit_screener_question', question_id=u.id, question=u.question) }}">Edit</a>            
+                            </td>
+                        </tr>
+                    {% endfor %}
+
+                    {% for u in scale_question %}
+                        <tr>
+                            <td>{{ u.title }}</td>
+							<td>{{ u.description }}</td>
+							<td>{{ u.option_one }}</td>
+							<td>{{ u.option_two }}</td>
+							<td>{{ u.option_three }}</td>
+							<td>{{ u.option_four }}</td>
+							<td>{{ u.option_five }}</td>
+                            <td>
+                                <a class="ui blue left floated button" href="{{ url_for('question.edit_scale_question', question_id=u.id, question=u.title) }}">Edit</a>            
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    {% for u in multiple_choice_question %}
+                        <tr>
+                            <td>{{ u.title }}</td>
+							<td>{{ u.description }}</td>
+							<td>{{ u.multiple_choice_option_one }}</td>
+							<td>{{ u.multiple_choice_option_two }}</td>
+							<td>{{ u.multiple_choice_option_three }}</td>
+							<td>{{ u.multiple_choice_option_four }}</td>
+							<td>{{ u.multiple_choice_option_five }}</td>
+                            <td>
+                                <a class="ui blue left floated button" href="{{ url_for('question.edit_multiple_choice_question', question_id=u.id, question=u.title) }}">Edit</a>            
                             </td>
                         </tr>
                     {% endfor %}
