--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -47,9 +47,9 @@
                         <th>Project No.</th>
                         <th>Project Name</th>
                         <th>Edit Project Name</th>
-                        <th>Create Screener Questions</th>
-                        <th>Create Scale Questions</th>
-                        <th>Create Multiple Choice Questions</th>
+                        <th>{{ count_screener_questions }} Screener Questions</th>
+                        <th>{{ count_screener_questions }} Scale Questions</th>
+                        <th> {{ count_multiple_choice_questions }} Multi Choice Questions</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -62,7 +62,13 @@
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
                                    href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
-							<td><a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=u.id, org_id=u.organisation_id) }}">Add Screener </a></td>
+							<td>
+								{% if count_screener_questions >= 1 %} <!----limit to only 10 questions per project --->
+								One screener question limit.
+									{% else %}
+							<a class="ui teal right floated button" href="{{ url_for('question.new_screener_question', project_id=u.id, org_id=u.organisation_id) }}">Add Screener </a>
+							{% endif %}
+							</td>
 							<td><a class="ui teal right floated button" href="{{ url_for('question.new_scale_question', project_id=u.id, org_id=u.organisation_id) }}">Add Scaled </a></td>
 							<td><a class="ui teal right floated button" href="{{ url_for('question.new_multiple_choice_question', project_id=u.id, org_id=u.organisation_id) }}">Add Multiple Choice</a></td>
                         </tr>
