--- a/app/templates/question/create_scale_question.html
+++ b/app/templates/question/create_scale_question.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-                <a class="ui basic compact button" href="{{ url_for('question.index') }}">
+                <a class="ui basic compact button" href="{{ url_for('project.index') }}">
                 <i class="caret left icon"></i>
                 Back to Questions' List
             </a>
