--- a/app/templates/main/thanks.html
+++ b/app/templates/main/thanks.html
@@ -30,23 +30,15 @@
       </div>
 
       <div class="jumbotron">
-        <h1 class="display-3">The Product</h1>
-        <p class="lead">Purchase The Product for only $99.</p>
-        <a href="#" id="buy_now_btn" class="btn btn-primary">Buy Now</a>
+        <h1 class="display-3">Thank You</h1>
+        <p class="lead">You will receive a link to The Product in your email.</p>
       </div>
 
       <footer class="footer">
         <p>&copy; Store 2017</p>
       </footer>
-      <script src="https://js.stripe.com/v3/"></script>
-      {#
-      <script>
-        const checkout_public_key = '{{checkout_public_key}}';
-        const checkout_session_id = '{{checkout_session_id}}';
-      </script>
-      #}
-      <script src="{{ url_for('static', filename='script-ajax.js') }}"></script>
 
     </div> <!-- /container -->
+
   </body>
 </html>
